abstract PDFFacade from MenuControler to the ResumeExporter